fixed styling references and tab spacing

--- a/app/app.css
+++ b/app/app.css
@@ -1,7 +1,7 @@
 @import "nativescript-theme-core/css/sky.css";
-@import "list.css";
-@import "category.css";
-@import "detail.css";
+@import "pages/list.css";
+@import "pages/category.css";
+@import "pages/detail.css";
 
 .basket-icon {
     top:10;
@@ -16,6 +16,10 @@
 .text {
     font-size:12;
     margin-bottom:10;
+}
+
+.tab-icon {
+    margin:15px;
 }
 
 .active-link {
